# TriSecLabs

./: .dockerignore  .env.docker  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  FRONTEND.md  IMPLEMENTACION.md  SETUP.md  dev.sh  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json
.sqlx/: query-001197f0ac228563c001eeaccc2ba972d31436a250f61a7ac5ee25236a91ef58.json  query-0b1d23121be391ad32b48bf7356fcf0d40be3131af41af171fd53c160578fbb1.json  query-1ff91e0ea3e3fb06c91c89b88aadf346f7e4e22594fbc7cf9ef6e4814cfbf5c0.json  query-28c21aa668bb58ffac6706daeb3994cc37d401e4fb7dd0952118c749dbdacc2a.json  query-3505e0f7736f72607f7e69ae9e3e5734781f1585a1675d5ec5af9406503ded5d.json  query-4728e56aab9e1f98288c4087761f351bc51ea641b18adcb726b497ce86051c27.json  query-50c38b336005419b713bc4d8d00c9ae64c0f6e872cba3c4e251359d988bbd809.json  query-573fcc1bedc584fcd6d7fc5ecc6c7d70df82d3f92951dc455d72c53ba9fe9df5.json  query-5e449a2f34a9cb861edcfacfa4bddb5fd26be8e7e4f0a15db29aeac1d883a92b.json  query-6bdb8bccded7a3b455e74839d8ff4d1ce387c36119100c1df3161e2b55063d2a.json  query-7198b3f5ad1bb710fb9e1d4e81a4ade87e748dde7f91b657c6b11903a3bd02d8.json  query-7474011f39931a083e558a64c494173647c9f9fc93d6af7b92323aba591768ad.json  query-86dcc73be7341e46c0da0dc60a745530cdd86aaaabb2bb95d0b1f38753fedaca.json  query-968a62c7f233ee8c73614c687b7f946176fabe2f57e1c66ca12d8f0306f63e35.json  query-9cd93949c54bd332fdc4c7dfec615c6bf366400e6e4a0d88a88b635691461b7d.json  query-9f011f5aa1399604038960bb5f0ba0442fd5704fe0b763688a0b67012311d465.json  query-a2488decc6d02ac05b2aeae126e7cad5364364adc58d3ccd326c64cee73b6fb4.json  query-b3c8c18cc008f1033104e3a684ddfc8f057585ee88b63860fa34f78dbc68a96d.json  query-b717bf64b2b23a1e4daf4db237617f6bbb4fa1ae1874bf0bb0ab4402d5923f21.json  query-c1ccf32a6f7ceb2e8904d5c8760c0236afec5fcf4771b39dfd2009c3a25b349d.json  query-d29cd44b54187ed85a4d7e82d08ed8d327fd07df149a9ef995325b197c749522.json  query-dc5791b75dcef135a9fa72e707dc708cf361555482af3b24ad5b5e92f2b7380f.json  query-de1572427e7793e334483b17e0b8a6faada3d5f15c56f7a3f8b548e60f061d83.json  query-e10c53020b68a0c5d9e964937d0626f9bd6762f815da51e0ae3cb720d2ec2ea3.json  query-e5cfc871942c616c8f7667f46e1ea7a8ae09d9a92aa1dca3c74f40db358ff6b7.json  query-e7737882fa44d1147a3c437e2357c0b840b37235477634ddc48a01d7072b3f34.json  query-e7ec9a3ecf2207270836f459a72f9616845b61ca0d694f2199f83821e27b37db.json  query-f32c2f62dc1905cade17104ff0e6af88db4a00e815abf8e98d41a79377b3f513.json  query-f65eeaed2cf3b59298da632c24d607f62fa4d427299114192c5e1524480433a9.json  query-f8f50be69807b3bdf322abfff06a31b2bfbb4a3d533cb0f7b793056dff4c90de.json
apps/desktop/: Cargo.toml  package.json  tauri.conf.json
apps/web/: package.json  svelte.config.js  tsconfig.json  vite.config.ts
crates/backend/: Cargo.toml
crates/backend/src/: main.rs  state.rs
crates/backend/src/middleware/: auth.rs
crates/backend/src/routes/: api.rs  auth.rs  mod.rs  stream.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs  pool.rs  rls.rs
crates/db/src/queries/: auth.rs  jobs.rs  metrics.rs  mod.rs  ports.rs  scan_targets.rs  tenants.rs  vulnerabilities.rs
crates/llm/: Cargo.toml
crates/shared/: Cargo.toml
crates/workers/: Cargo.toml
crates/workers/src/: main.rs
crates/workers/src/handlers/: analysis.rs  llm_report.rs  mod.rs  scan.rs
docs/: PRODUCT.md  TECHNICAL.md
migrations/: 0001_tenants.sql  0002_users.sql  0003_scan_targets.sql  0004_jobs.sql  0005_vulnerabilities_ports.sql  0006_metrics.sql  0007_dev_seed.sql  0008_fix_seed_password.sql  0009_jobs_progress.sql
(+57 files in other folders)
