[workspace]
resolver = "2"
members = [
    "crates/shared",
    "crates/db",
    "crates/llm",
    "crates/backend",
    "crates/workers",
    "apps/desktop",
]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum  = { version = "0.7", features = ["macros"] }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["fs", "compression-gzip", "trace", "cors"] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate",
] }

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth
jsonwebtoken = "9"
bcrypt       = "0.15"

# Utils
uuid     = { version = "1", features = ["v4", "serde"] }
chrono   = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow   = "1"
tracing  = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP client (LLM y scans externos)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
