[package]
name    = "server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
common = { path = "../shared" }
db     = { path = "../db" }
llm    = { path = "../llm" }

axum        = { workspace = true }
tower       = { workspace = true }
tower-http  = { workspace = true }

tokio           = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
sqlx            = { workspace = true }
uuid            = { workspace = true }
chrono          = { workspace = true }
jsonwebtoken    = { workspace = true }
bcrypt          = { workspace = true }
tracing         = { workspace = true }
tracing-subscriber = { workspace = true }

tokio-stream    = "0.1"
futures         = "0.3"
