[package]
name = "db"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../shared" }
sqlx = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
