[package]
name    = "worker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "worker"
path = "src/main.rs"

[dependencies]
common = { path = "../shared" }
db     = { path = "../db" }
llm    = { path = "../llm" }

tokio           = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
sqlx            = { workspace = true }
uuid            = { workspace = true }
tracing         = { workspace = true }
tracing-subscriber = { workspace = true }
