[package]
name    = "worker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "worker"
path = "src/main.rs"

[dependencies]
common = { path = "../shared" }
db     = { path = "../db" }
llm    = { path = "../llm" }

tokio           = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
sqlx            = { workspace = true }
uuid            = { workspace = true }
tracing         = { workspace = true }
tracing-subscriber = { workspace = true }

sha2      = "0.10"
roxmltree = "0.20"
regex     = "1.10"
ipnetwork = "0.20"
tempfile  = "3.10"
tokio-util = "0.7"
chrono    = { workspace = true }
